* Added Tooltips on server information page * Added auto save login after successful test * Added Additional tweaks for less Backup timeouts * Added new option to enable more IO instead of memory approach for Backups * Fixed Dropbox error when directory ends with space * Fixed "current running" that is stuck (not continuing backups) * Fixed deprecated theme calls * Fixed contacting disconnected child sites * Fixed non https on https host for extensions * Fixed issues with self signed SSL certificates (added option in Advanced section) * Removed possibility to query disconnected childs * Removed link to Google url for jquery to prevent possible tracking * Removed old code references
git-svn-id: https://plugins.svn.wordpress.org/mainwp/trunk@977238 b8457f37-d9ea-0310-8a92-e5e31aec5664

--- a/css/mainwp.css
+++ b/css/mainwp.css
@@ -202,6 +202,7 @@ h3.mainwp_box_title {
     line-height: 1.4;
     margin: 0;
     padding: 8px 12px;
+    border-bottom: 1px solid #eee;
 }
 
 .mainwp_inside {
@@ -2607,4 +2608,38 @@ h4.mainwp-custom-excludes {
   div#postbox-container-2.postbox-container {
     width: 100% !important;
   }
+}
+
+.mainwp_wp_offline td
+{
+    color: #ccc;
+    font-style: italic;
+}
+
+#mwp-server-information {
+    display: none;
+    margin: 10px 0;
+    padding: 0;
+    position: relative;
+}
+
+#mwp-server-information textarea {
+    border-radius: 0;
+    font-family: monospace;
+    font-size: 12px;
+    height: 300px;
+    line-height: 20px;
+    margin: 0;
+    outline: 0 none;
+    padding: 20px;
+    resize: none;
+    width: 100%;
+    -moz-border-radius:0;
+    -webkit-border-radius:0;
+}
+
+.mwp_close_srv_info {
+    display: none;
+    float: right;
+    margin:  5px 0 5px;
 }
